--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+cordovacarlos22# Auto detect text files and perform LF normalization
+* text=cordovacarlos22
